--- a/connectfour.css
+++ b/connectfour.css
@@ -29,7 +29,7 @@ h1 {
 
 .cell {
   align-items: center;
-  background: #4370F1;
+  background: #0de0e0;
   display: flex;
   height: 100px;
   justify-content: center;
